# OrbBand

./: README.md  pyproject.toml
example/: example_script.py
src/orbband/: __init__.py  core.py  jmol_rgb_lch.csv  periodic_table.py  utils.py
